--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "^35.0.0",
     "fbjs": "^1.0.0",
     "mongodb": "^3.3.5",
+    "mongoose": "^5.7.13",
     "native-base": "^2.13.8",
+    "node-libs-react-native": "^1.0.3",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
