--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^35.0.0",
     "fbjs": "^1.0.0",
     "mongodb": "^3.3.5",
+    "mongodb-stitch-react-native-sdk": "^4.7.1",
     "mongoose": "^5.7.13",
     "native-base": "^2.13.8",
     "node-libs-react-native": "^1.0.3",
@@ -21,6 +22,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.11.3",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
